# Thesaurus

./: .gitignore  CMakeLists.txt  README.md  Thesaurus.cpp  Thesaurus.h  build.sh  main.cpp  valgrind.sh
.github/workflows/: build_all.yml
Source/: CMakeLists.txt  IDatabase.h  Thesaurus.cpp  Thesaurus.h  ThesaurusDatabase.cpp  ThesaurusDatabase.h  ThesaurusException.h
Test/: CMakeLists.txt  ThesaurusMocks.h  ThesaurusTests.cpp  Thesaurus_add.cpp
scripts/: cppcheck.sh  valgrind.sh
